# FFmpegpDecode

./: README.md
app/: build.gradle
app/src/androidTest/java/com/sample/decode/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ffmpegp_decode.cpp
app/src/main/java/com/sample/decode/: MainActivity.java
app/src/main/java/com/sample/decode/ffmpegp/: VideoUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sample/decode/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
